--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,11 @@
     <string name="item_search_title">Search</string>
     <string name="item_edit_title">Edit</string>
     <string name="item_create_title">Create</string>
+
+    <!--Navigation Drawer-->
+    <string name="item_estate_loan_simulator">Estate loan simulator</string>
+
+    <!-- Used in NavigationDrawer -->
+    <string name="navigation_drawer_open">Open navigation drawer</string>
+    <string name="navigation_drawer_close">Close navigation drawer</string>
 </resources>
