--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,6 +8,7 @@
     <string name="item_edit_title">Edit</string>
     <string name="item_create_title">Create</string>
     <string name="create_title">Create Property</string>
+    <string name="map_title">Maps</string>
 
     <!--Navigation Drawer-->
     <string name="item_estate_loan_simulator">Estate loan simulator</string>
@@ -45,10 +46,7 @@
     <string name="available">Available</string>
     <string name="sold">Sold</string>
     <string name="description_tv">Description</string>
-    <string name="description_example">" Magnificent house of 350m ² living space located 10 minutes walk from the city center of Figeac with 6 bedrooms,
-        kitchen, dining room, large living room, 3 bathrooms, office, dressing room, pool house with shower and separate toilet,
-        superb heated pool 14x6.Tennis. 3 garages. Beautiful fenced park of 5500 m².Free shuttle to 50 meters.
-        A must see ! Contact Damien at 06 84 29 05 32 Reference: 07645_6296D "</string>
+    <string name="description_example">" Magnificent house of 350m ² "</string>
     <string name="pictures_tv">Pictures</string>
     <string name="pictures_gallery">Gallery</string>
     <string name="pictures_camera">Camera</string>
@@ -66,5 +64,10 @@
     <string name="post_code_example">15000</string>
     <string name="city_example">New York</string>
     <string name="validate">VALIDATE</string>
+    <string name="dialogTitle">Network not available!</string>
+    <string name="dialog_not_internet_text">Sorry but the internet does not allow us to record the location of this property. Do you want to save the property anyway? Its location will be recorded from the map if the network allows it.</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 
 </resources>
