--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -46,6 +46,8 @@ Do you want to access the wifi settings?</string>
     <string name="bedrooms_max">Bedrooms max</string>
     <string name="images_min">Min Number of Images</string>
     <string name="nbr_of_apart">apart N°</string>
+    <string name="price_title">Price</string>
+    <string name="type_title">Type of property</string>
 
     <!--Fragment list-->
     <string name="sold_text">SOLD</string>
