--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,6 +8,7 @@
     <string name="item_search_title">Search</string>
     <string name="item_edit_title">Edit</string>
     <string name="item_create_title">Create</string>
+    <string name="item_prefs_title">Preferences</string>
     <string name="create_title">Create Property</string>
     <string name="edit_title">Edit Property</string>
     <string name="logout_title">Logout</string>
@@ -132,5 +133,10 @@ Do you want to access the wifi settings?</string>
     <string name="detail_surface">detail surface</string>
     <string name="enter_name">Enter Name</string>
     <string name="cancel">Cancel</string>
+
+    <!-- Settings Fragment -->
+    <string name="device_choice">Choose your app device :</string>
+    <string name="dollars">$</string>
+    <string name="euros">€</string>
 
 </resources>
